exports[`DbcJsDocParser > parse() > reports ERR_DBC_ORDER for implements order violation 1`] = `
{
  "entries": [
    {
      "type": "param",
      "value": "User identifier.",
      "issues": [],
      "dataType": "string",
      "specifier": "userId"
    },
    {
      "type": "implements",
      "value": "in ./path",
      "issues": [
        {
          "code": "ERR_DBC_ORDER",
          "line": 2
        }
      ],
      "specifier": "VendorGateway"
    }
  ],
  "format": "multi-line"
}
`;

exports[`DbcJsDocParser > parse() > reports ERR_DBC_ORDER when invariant precedes implements 1`] = `
{
  "entries": [
    {
      "type": "invariant",
      "value": "Must be called after init.",
      "issues": []
    },
    {
      "type": "implements",
      "value": "",
      "issues": [
        {
          "code": "ERR_DBC_ORDER",
          "line": 2
        }
      ],
      "specifier": "VendorGateway"
    }
  ],
  "format": "multi-line"
}
`;

exports[`DbcJsDocParser > parse() > should match the invalid contract example from task spec 1`] = `
{
  "entries": [
    {
      "type": "purpose",
      "value": "A short description.",
      "issues": []
    },
    {
      "type": "returns",
      "dataType": "void",
      "value": "",
      "issues": []
    },
    {
      "type": "see",
      "value": "",
      "issues": [
        {
          "code": "ERR_DBC_PURPOSE_CONFLICT",
          "line": 3
        }
      ],
      "specifier": "OtherClass#method"
    },
    {
      "type": "param",
      "value": "",
      "issues": [
        {
          "code": "ERR_DBC_ORDER",
          "line": 4
        },
        {
          "code": "ERR_DBC_PARAM_NAME_MISSING",
          "line": 4
        }
      ],
      "dataType": "string"
    }
  ],
  "format": "multi-line"
}
`;

exports[`DbcJsDocParser > parse() > should not report order violation for valid implements, consumer, param, returns sequence 1`] = `
{
  "entries": [
    {
      "type": "implements",
      "value": "in ./path",
      "issues": [],
      "specifier": "VendorGateway"
    },
    {
      "type": "consumer",
      "value": "MainApp",
      "issues": []
    },
    {
      "type": "param",
      "value": "User identifier.",
      "issues": [],
      "dataType": "string",
      "specifier": "userId"
    },
    {
      "type": "returns",
      "dataType": "boolean",
      "value": "True on success.",
      "issues": []
    }
  ],
  "format": "multi-line"
}
`;

exports[`DbcJsDocParser > parse() > should report contract order violation 1`] = `
{
  "entries": [
    {
      "type": "returns",
      "dataType": "boolean",
      "value": "True on success.",
      "issues": []
    },
    {
      "type": "param",
      "value": "User identifier.",
      "issues": [
        {
          "code": "ERR_DBC_ORDER",
          "line": 2
        }
      ],
      "dataType": "string",
      "specifier": "userId"
    }
  ],
  "format": "multi-line"
}
`;

exports[`DbcJsDocParser > parse() > should report invalid see format 1`] = `
{
  "entries": [
    {
      "type": "see",
      "value": "invalid-ref",
      "issues": [
        {
          "code": "ERR_DBC_SEE_FORMAT_INVALID",
          "line": 1
        }
      ]
    }
  ],
  "format": "single-line"
}
`;

exports[`DbcJsDocParser > parse() > should report missing param name 1`] = `
{
  "entries": [
    {
      "type": "param",
      "value": "",
      "issues": [
        {
          "code": "ERR_DBC_PARAM_NAME_MISSING",
          "line": 1
        }
      ],
      "dataType": "string"
    }
  ],
  "format": "single-line"
}
`;

exports[`DbcJsDocParser > parse() > should report purpose and see conflict 1`] = `
{
  "entries": [
    {
      "type": "purpose",
      "value": "Main behavior.",
      "issues": []
    },
    {
      "type": "see",
      "value": "",
      "issues": [
        {
          "code": "ERR_DBC_PURPOSE_CONFLICT",
          "line": 2
        }
      ],
      "specifier": "ExternalContract#run"
    }
  ],
  "format": "multi-line"
}
`;

exports[`DbcJsDocParser > parse() > should report purpose and see conflict when see precedes purpose 1`] = `
{
  "entries": [
    {
      "type": "see",
      "value": "",
      "issues": [],
      "specifier": "ExternalContract#run"
    },
    {
      "type": "purpose",
      "value": "Main behavior.",
      "issues": [
        {
          "code": "ERR_DBC_PURPOSE_CONFLICT",
          "line": 2
        }
      ]
    }
  ],
  "format": "multi-line"
}
`;
